impl/src/main/java/org/glassfish/wasp/taglibs/standard/lang/jstl/parser/ELParser.java
/*
 * Copyright (c) 2022 Contributors to the Eclipse Foundation
 * Copyright (c) 1997-2020 Oracle and/or its affiliates. All rights reserved.
 * Copyright (c) 2020 Payara Servicer Ltd.
 * Copyright 2004 The Apache Software Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.glassfish.wasp.taglibs.standard.lang.jstl.parser;

import java.util.ArrayList;
import java.util.List;
import java.util.Vector;

import org.glassfish.wasp.taglibs.standard.lang.jstl.AndOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.ArraySuffix;
import org.glassfish.wasp.taglibs.standard.lang.jstl.BinaryOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.BinaryOperatorExpression;
import org.glassfish.wasp.taglibs.standard.lang.jstl.BooleanLiteral;
import org.glassfish.wasp.taglibs.standard.lang.jstl.ComplexValue;
import org.glassfish.wasp.taglibs.standard.lang.jstl.DivideOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.EmptyOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.EqualsOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.Expression;
import org.glassfish.wasp.taglibs.standard.lang.jstl.ExpressionString;
import org.glassfish.wasp.taglibs.standard.lang.jstl.FloatingPointLiteral;
import org.glassfish.wasp.taglibs.standard.lang.jstl.FunctionInvocation;
import org.glassfish.wasp.taglibs.standard.lang.jstl.GreaterThanOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.GreaterThanOrEqualsOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.IntegerLiteral;
import org.glassfish.wasp.taglibs.standard.lang.jstl.LessThanOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.LessThanOrEqualsOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.Literal;
import org.glassfish.wasp.taglibs.standard.lang.jstl.MinusOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.ModulusOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.MultiplyOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.NamedValue;
import org.glassfish.wasp.taglibs.standard.lang.jstl.NotEqualsOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.NotOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.NullLiteral;
import org.glassfish.wasp.taglibs.standard.lang.jstl.OrOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.PlusOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.PropertySuffix;
import org.glassfish.wasp.taglibs.standard.lang.jstl.StringLiteral;
import org.glassfish.wasp.taglibs.standard.lang.jstl.UnaryMinusOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.UnaryOperator;
import org.glassfish.wasp.taglibs.standard.lang.jstl.UnaryOperatorExpression;
import org.glassfish.wasp.taglibs.standard.lang.jstl.ValueSuffix;

/**
 * Generated EL parser.
 *
 * @author Nathan Abramson
 * @author Shawn Bayern
 */
public class ELParser implements ELParserConstants {

    public static void main(String args[]) throws ParseException {
        ELParser parser = new ELParser(System.in);
        parser.ExpressionString();
    }

    /**
     * *************************************** GRAMMAR PRODUCTIONS * ***************************************
     */
    /**
     *
     * Returns a String if the expression string is a single String, an Expression if the expression string is a single
     * Expression, an ExpressionString if it's a mixture of both.
     *
     */
    final public Object ExpressionString() throws ParseException {
        Object ret = "";
        List<Object> elems = null;
        Object elem;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
        case NON_EXPRESSION_TEXT:
            ret = AttrValueString();
            break;
        case START_EXPRESSION:
            ret = AttrValueExpression();
            break;
        default:
            jj_la1[0] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
        }
        label_1: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case NON_EXPRESSION_TEXT:
            case START_EXPRESSION:
                break;
            default:
                jj_la1[1] = jj_gen;
                break label_1;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case NON_EXPRESSION_TEXT:
                elem = AttrValueString();
                break;
            case START_EXPRESSION:
                elem = AttrValueExpression();
                break;
            default:
                jj_la1[2] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
            if (elems == null) {
                elems = new ArrayList<>();
                elems.add(ret);
            }
            elems.add(elem);
        }
        if (elems != null) {
            ret = new ExpressionString(elems.toArray());
        }
        return ret;
    }

    final public String AttrValueString() throws ParseException {
        Token t = jj_consume_token(NON_EXPRESSION_TEXT);
        return t.image;
    }

    final public Expression AttrValueExpression() throws ParseException {
        jj_consume_token(START_EXPRESSION);
        Expression exp = Expression();
        jj_consume_token(END_EXPRESSION);
        return exp;
    }

    final public Expression Expression() throws ParseException {
        return OrExpression();
    }

    final public Expression OrExpression() throws ParseException {
        Expression startExpression;
        BinaryOperator operator;
        Expression expression;
        List<BinaryOperator> operators = null;
        List<Expression> expressions = null;
        startExpression = AndExpression();
        label_2: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case OR1:
            case OR2:
                break;
            default:
                jj_la1[3] = jj_gen;
                break label_2;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case OR1:
                jj_consume_token(OR1);
                break;
            case OR2:
                jj_consume_token(OR2);
                break;
            default:
                jj_la1[4] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
            operator = OrOperator.SINGLETON;
            expression = AndExpression();
            if (operators == null) {
                operators = new ArrayList<>();
                expressions = new ArrayList<>();
            }
            operators.add(operator);
            expressions.add(expression);
        }
        if (operators != null) {
            return new BinaryOperatorExpression(startExpression, operators, expressions);
        } else {
            return startExpression;
        }
    }

    final public Expression AndExpression() throws ParseException {
        Expression startExpression;
        BinaryOperator operator;
        Expression expression;
        List<BinaryOperator> operators = null;
        List<Expression> expressions = null;
        startExpression = EqualityExpression();
        label_3: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case AND1:
            case AND2:
                break;
            default:
                jj_la1[5] = jj_gen;
                break label_3;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case AND1:
                jj_consume_token(AND1);
                break;
            case AND2:
                jj_consume_token(AND2);
                break;
            default:
                jj_la1[6] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
            operator = AndOperator.SINGLETON;
            expression = EqualityExpression();
            if (operators == null) {
                operators = new ArrayList<>();
                expressions = new ArrayList<>();
            }
            operators.add(operator);
            expressions.add(expression);
        }
        if (operators != null) {
            return new BinaryOperatorExpression(startExpression, operators, expressions);
        } else {
            return startExpression;
        }
    }

    final public Expression EqualityExpression() throws ParseException {
        Expression startExpression;
        BinaryOperator operator;
        Expression expression;
        List<BinaryOperator> operators = null;
        List<Expression> expressions = null;
        startExpression = RelationalExpression();
        label_4: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case EQ1:
            case EQ2:
            case NE1:
            case NE2:
                break;
            default:
                jj_la1[7] = jj_gen;
                break label_4;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case EQ1:
            case EQ2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case EQ1:
                    jj_consume_token(EQ1);
                    break;
                case EQ2:
                    jj_consume_token(EQ2);
                    break;
                default:
                    jj_la1[8] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = EqualsOperator.SINGLETON;
                break;
            case NE1:
            case NE2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NE1:
                    jj_consume_token(NE1);
                    break;
                case NE2:
                    jj_consume_token(NE2);
                    break;
                default:
                    jj_la1[9] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = NotEqualsOperator.SINGLETON;
                break;
            default:
                jj_la1[10] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
            expression = RelationalExpression();
            if (operators == null) {
                operators = new ArrayList<>();
                expressions = new ArrayList<>();
            }
            operators.add(operator);
            expressions.add(expression);
        }
        if (operators != null) {
            return new BinaryOperatorExpression(startExpression, operators, expressions);
        } else {
            return startExpression;
        }
    }

    final public Expression RelationalExpression() throws ParseException {
        Expression startExpression;
        BinaryOperator operator;
        Expression expression;
        List<BinaryOperator> operators = null;
        List<Expression> expressions = null;
        startExpression = AddExpression();
        label_5: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case GT1:
            case GT2:
            case LT1:
            case LT2:
            case LE1:
            case LE2:
            case GE1:
            case GE2:
                break;
            default:
                jj_la1[11] = jj_gen;
                break label_5;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LT1:
            case LT2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LT1:
                    jj_consume_token(LT1);
                    break;
                case LT2:
                    jj_consume_token(LT2);
                    break;
                default:
                    jj_la1[12] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = LessThanOperator.SINGLETON;
                break;
            case GT1:
            case GT2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case GT1:
                    jj_consume_token(GT1);
                    break;
                case GT2:
                    jj_consume_token(GT2);
                    break;
                default:
                    jj_la1[13] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = GreaterThanOperator.SINGLETON;
                break;
            case GE1:
            case GE2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case GE1:
                    jj_consume_token(GE1);
                    break;
                case GE2:
                    jj_consume_token(GE2);
                    break;
                default:
                    jj_la1[14] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = GreaterThanOrEqualsOperator.SINGLETON;
                break;
            case LE1:
            case LE2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LE1:
                    jj_consume_token(LE1);
                    break;
                case LE2:
                    jj_consume_token(LE2);
                    break;
                default:
                    jj_la1[15] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = LessThanOrEqualsOperator.SINGLETON;
                break;
            default:
                jj_la1[16] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
            expression = AddExpression();
            if (operators == null) {
                operators = new ArrayList<>();
                expressions = new ArrayList<>();
            }
            operators.add(operator);
            expressions.add(expression);
        }
        if (operators != null) {
            return new BinaryOperatorExpression(startExpression, operators, expressions);
        } else {
            return startExpression;
        }
    }

    final public Expression AddExpression() throws ParseException {
        Expression startExpression;
        BinaryOperator operator;
        Expression expression;
        List<BinaryOperator> operators = null;
        List<Expression> expressions = null;
        startExpression = MultiplyExpression();
        label_6: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case PLUS:
            case MINUS:
                break;
            default:
                jj_la1[17] = jj_gen;
                break label_6;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case PLUS:
                jj_consume_token(PLUS);
                operator = PlusOperator.SINGLETON;
                break;
            case MINUS:
                jj_consume_token(MINUS);
                operator = MinusOperator.SINGLETON;
                break;
            default:
                jj_la1[18] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
            expression = MultiplyExpression();
            if (operators == null) {
                operators = new ArrayList<>();
                expressions = new ArrayList<>();
            }
            operators.add(operator);
            expressions.add(expression);
        }
        if (operators != null) {
            return new BinaryOperatorExpression(startExpression, operators, expressions);
        } else {
            return startExpression;
        }
    }

    final public Expression MultiplyExpression() throws ParseException {
        Expression startExpression;
        BinaryOperator operator;
        Expression expression;
        List<BinaryOperator> operators = null;
        List<Expression> expressions = null;
        startExpression = UnaryExpression();
        label_7: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case MULTIPLY:
            case DIVIDE1:
            case DIVIDE2:
            case MODULUS1:
            case MODULUS2:
                break;
            default:
                jj_la1[19] = jj_gen;
                break label_7;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case MULTIPLY:
                jj_consume_token(MULTIPLY);
                operator = MultiplyOperator.SINGLETON;
                break;
            case DIVIDE1:
            case DIVIDE2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case DIVIDE1:
                    jj_consume_token(DIVIDE1);
                    break;
                case DIVIDE2:
                    jj_consume_token(DIVIDE2);
                    break;
                default:
                    jj_la1[20] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = DivideOperator.SINGLETON;
                break;
            case MODULUS1:
            case MODULUS2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case MODULUS1:
                    jj_consume_token(MODULUS1);
                    break;
                case MODULUS2:
                    jj_consume_token(MODULUS2);
                    break;
                default:
                    jj_la1[21] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = ModulusOperator.SINGLETON;
                break;
            default:
                jj_la1[22] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
            expression = UnaryExpression();
            if (operators == null) {
                operators = new ArrayList<>();
                expressions = new ArrayList<>();
            }
            operators.add(operator);
            expressions.add(expression);
        }
        if (operators != null) {
            return new BinaryOperatorExpression(startExpression, operators, expressions);
        } else {
            return startExpression;
        }
    }

    final public Expression UnaryExpression() throws ParseException {
        Expression expression;
        UnaryOperator singleOperator = null;
        UnaryOperator operator;
        List<UnaryOperator> operators = null;
        label_8: while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case MINUS:
            case NOT1:
            case NOT2:
            case EMPTY:
                break;
            default:
                jj_la1[23] = jj_gen;
                break label_8;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case NOT1:
            case NOT2:
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case NOT1:
                    jj_consume_token(NOT1);
                    break;
                case NOT2:
                    jj_consume_token(NOT2);
                    break;
                default:
                    jj_la1[24] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
                }
                operator = NotOperator.SINGLETON;
                break;
            case MINUS:
                jj_consume_token(MINUS);
                operator = UnaryMinusOperator.SINGLETON;
                break;
            case EMPTY:
                jj_consume_token(EMPTY);
                operator = EmptyOperator.SINGLETON;
                break;
            default:
                jj_la1[25] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
            }
            if (singleOperator == null) {
                singleOperator = operator;
            } else if (operators == null) {
                operators = new ArrayList<>();
                operators.add(singleOperator);
                operators.add(operator);
            } else {
                operators.add(operator);
            }
        }
        expression = Value();
        if (operators != null) {
            return new UnaryOperatorExpression(null, operators, expression);
        } else if (singleOperator != null) {
            return new UnaryOperatorExpression(singleOperator, null, expression);
        } else {
            return expression;
        }
    }
